chore: minor changes to the feedback form

--- a/home/templates/home/includes/export.html
+++ b/home/templates/home/includes/export.html
@@ -10,7 +10,7 @@
                 <img class="image" src="{% static 'images/airplane.jpg'%}">
             </div>
             <div class="export__form">
-                {% include 'home/includes/feedback-form.html' with id='exportFeedbackForm' title='Доставим в Вашу страну!' subtitle='Оставьте заявку в наш Экспортный отдел!<br>Узнайте стоимость доставки до Вашей страны!' %}
+                {% include 'includes/feedback-form.html' with id='exportFeedbackForm' title='Доставим в Вашу страну!' subtitle='Оставьте заявку в наш Экспортный отдел!<br>Узнайте стоимость доставки до Вашей страны!' %}
             </div>
         </div>
     </div>
