--- a/privollesru/templates/includes/feedback-form.html
+++ b/privollesru/templates/includes/feedback-form.html
@@ -1,4 +1,4 @@
-<form id="{{ id }}" class="form" method="POST" action="">
+<form id="{{ id }}" class="form {{ extra_css }}" method="POST" action="" {% if hidden %}style="display: none;"{% endif %}>
     {% csrf_token %}
     <h3 class="form__title">{{ title }}</h3>
     <span class="form__subtitle">{{ subtitle }}</span>
@@ -6,7 +6,7 @@
     <input class="form__input" type="tel" name="phone_number" placeholder="+7 (999) 888-77-66">
     <label class="form__label" for="name">Ваше имя</label>
     <input class="form__input" type="text" name="name" placeholder="Иван">
-    {% if show_product_input %}
+    {% if show_description_input %}
         <label class="form__label" for="product">Наименование, размер и вид продукции</label>
         <input class="form__input" type="text" name="description" placeholder="Кедр, имитация бруса 19х135">
     {% endif %}
