--- a/privollesru/templates/includes/header.html
+++ b/privollesru/templates/includes/header.html
@@ -29,7 +29,7 @@
             <div class="header__column">
                 <span class="header__title">Поставляем качественный лес и пиломатериалы</span>
                 <span class="header__subtitle header__subtitle_mv-1rem">В любых количествах точно в срок по РФ и на экспорт.</span>
-                <a href="#feedback" class="header__link button button_center button_opacity">Каталог продукции</a>
+                <div class="header__link button button_center button_opacity" onclick="showFeedbackForm()">Каталог продукции</div>
                 <div class="header__info corp-info">
                     <div class="corp-info__top">
                         <a class="corp-info__phone-number" href="tel:+79308198508">+7 (987) 757-57-18</a>
