--- a/home/templates/home/includes/products.html
+++ b/home/templates/home/includes/products.html
@@ -33,7 +33,7 @@
                             <span class="card__item-subtitle">18-50см и выше. Сорт 1-3</span>
                         </div>
                     </div>
-                    <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
+                    <div class="card__button button button_opacity" onclick="showFeedbackForm()">Узнать цены</div>
                 </div>
             </div>
 
@@ -69,7 +69,7 @@
                             <span class="card__item-subtitle">от 25х100 до 250х250</span>
                         </div>
                     </div>
-                    <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
+                    <div class="card__button button button_opacity" onclick="showFeedbackForm()">Узнать цены</div>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                             <span class="card__item-subtitle">Вагонка 12,8х88, Имитация бруса 19х135, Планкен 18х143</span>
                         </div>
                     </div>
-                    <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
+                    <div class="card__button button button_opacity" onclick="showFeedbackForm()">Узнать цены</div>
                 </div>
             </div>
 
@@ -116,7 +116,7 @@
                             <span class="card__item-subtitle">18-30см</span>
                         </div>
                     </div>
-                    <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
+                    <div class="card__button button button_opacity" onclick="showFeedbackForm()">Узнать цены</div>
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
                     <div class="card__background" style="background-image: url({% static 'images/cards/card04.jpg'%});"></div>
                     <h2 class="card__title">Кора лиственницы (мульча)</h2>
                     <span class="card__subtitle card__subtitle_weight-normal">Кора лиственницы (мульча). Используется садоводами для мульчирования почвы. Срок службы в 20 раз превышает срока службы сосны. Нефракционная. Упаковка в мешки по 60 литров. Продаём мульчу оптом и в розницу.</span>
-                    <a class="card__button button button_opacity" href="#feedback">Узнать цены</a>
+                    <div class="card__button button button_opacity" onclick="showFeedbackForm()">Узнать цены</div>
                 </div>
             </div>
 
