feat: setup maskedinput for phone number inputs

--- a/privollesru/templates/includes/feedback-form.html
+++ b/privollesru/templates/includes/feedback-form.html
@@ -3,7 +3,7 @@
     <h3 class="form__title">{{ title }}</h3>
     <span class="form__subtitle">{{ subtitle }}</span>
     <label class="form__label" for="phone_number">Введите номер телефона</label>
-    <input class="form__input" type="tel" name="phone_number" placeholder="+7 (999) 888-77-66">
+    <input id="phoneNumber" class="form__input" type="tel" name="phone_number" placeholder="+7 (999) 888-77-66">
     <label class="form__label" for="name">Ваше имя</label>
     <input class="form__input" type="text" name="name" placeholder="Иван">
     {% if show_description_input %}
