--- a/privollesru/templates/base.html
+++ b/privollesru/templates/base.html
@@ -18,7 +18,7 @@
         <link rel="canonical" href="http://privolles.ru/">
 
         <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
-        <link rel="shortcut icon" href="{% static 'favicon256.png' %}" type="image/png">
+        <link rel="shortcut icon" href="{% static 'favicon256.ico' %}" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
         <link rel="stylesheet" href="{% static 'fonts/roboto/fonts.css' %}">
