--- a/privollesru/templates/base.html
+++ b/privollesru/templates/base.html
@@ -49,6 +49,8 @@
 
         {% block content %}{% endblock %}
 
+        {% include 'includes/createdby.html' %}
+
         <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
