feat: add the "reviews" block

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -12,6 +12,8 @@
 
     {% include 'home/includes/products.html' %}
 
+    {% include 'home/includes/reviews.html' %}
+
     {% include 'includes/footer.html' %}
 
 {% endblock content %}
