--- a/privollesru/static/css/style.css
+++ b/privollesru/static/css/style.css
@@ -302,6 +302,7 @@ a {
 }
 
 .form__label {
+    max-width: 20rem;
     margin-top: 1rem;
     font-size: 1.2rem;
     font-weight: 500;
@@ -309,6 +310,7 @@ a {
 
 .form__input {
     max-width: 20rem;
+    width: 20rem;
     padding: 1rem;
     font-family: 'Roboto';
     font-weight: 500;
@@ -605,5 +607,49 @@ a {
 .createdby__link {
     margin-left: .3rem;
     color: #FFF;
+}
+
+/* .reviews */
+.reviews__wrapper {
+    margin-top: .5rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.reviews__item {
+    margin: 0 .5rem;
+    margin-top: 1rem;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.reviews__item:hover .reviews__icon {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, .5));
+}
+
+.reviews__icon {
+    padding: .5rem;
+    font-size: 6rem;
+    color: #53ba04;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: filter 1s;
+}
+
+.reviews__title {
+    margin: 0;
+    margin-top: .5rem;
+    font-size: 1.25rem;
+    color: #60b122;
+}
+
+.reviews__subtitle {
+    margin: 0;
+    margin-top: .5rem;
+    font-size: 1rem;
+    color: #60b122;
 }
 
