--- a/privollesru/static/css/media.css
+++ b/privollesru/static/css/media.css
@@ -66,6 +66,11 @@
         display: flex;
         align-items: center;
     }
+
+    /* .reviews */
+    .reviews__item {
+        width: 45%;
+    }
 }
 
 @media screen and (max-width: 899px) {
