chore: update "clients" block

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -6,6 +6,8 @@
 
     {% include 'includes/header.html' %}
 
+    {% include 'home/includes/clients.html' %}
+
     {% include 'home/includes/about.html' %}
 
     {% include 'home/includes/export.html' %}
