--- a/home/templates/home/includes/clients.html
+++ b/home/templates/home/includes/clients.html
@@ -6,39 +6,42 @@
         <span class="infoblock__subtitle">За 10 лет мы поставили лес и пиломатериалы более, чем 100 компаниям</span>
         <div class="infoblock__line"></div>
     </div>
-    <div class="clients__cards">
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client11.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client01.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client02.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client03.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client04.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client05.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client06.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client07.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client08.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client09.png'%}">
-        </div>
-        <div class="mini-card">
-            <img class="mini-card__image" src="{% static 'images/our-clients/client10.png'%}">
+
+    <div id="clientsCarousel" class="swiper clients__cards">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client11.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client01.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client02.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client03.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client04.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client05.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client06.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client07.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client08.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client09.png'%}">
+            </div>
+            <div class="swiper-slide mini-card">
+                <img class="mini-card__image" src="{% static 'images/our-clients/client10.png'%}">
+            </div>
         </div>
     </div>
 </div>
