--- a/privollesru/static/css/style.css
+++ b/privollesru/static/css/style.css
@@ -215,18 +215,13 @@ a {
 /* .clients */
 .clients__cards {
     margin: 1rem 0;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
 }
 
 /* .mini-card */
 .mini-card {
     position: relative;
-    margin: .5rem 0;
-    padding: 1rem;
     border-bottom: .3rem solid #212121;
-    width: 16rem; height: 8rem;
+    height: 8rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -251,10 +246,11 @@ a {
 }
 
 .mini-card__image {
+    margin: 0 auto;
     background-color: #FAFAFA;
     opacity: .75;
     padding: 1rem 0;
-    width: 100%; height: 50%;
+    width: 80%; height: 50%;
     object-fit: contain;
 }
 
