--- a/privollesru/templates/includes/footer.html
+++ b/privollesru/templates/includes/footer.html
@@ -17,7 +17,7 @@
                     <span class="aboutus__address"><i class="fas fa-map-marker-alt"></i> г. Бор, Стеклозаводское ш., д.3 к.1, оф.307</span>
                 </div>
             </div>
-            <iframe class="column__item footer__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A1d45a927e0086598e25086383b2ba3fb3da2db8a65b09edd71198f789b1e0522&amp;source=constructor" frameborder="0"></iframe>
+            <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1d45a927e0086598e25086383b2ba3fb3da2db8a65b09edd71198f789b1e0522&amp;lang=ru_RU&amp;scroll=false"></script>
         </div>
     </div>
 </footer>
