chore: update about block

--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -25,3 +25,36 @@
     </p>
 </div>
 
+<div class="about about_background">
+    <div class="about__wrapper content content_relative content_height_100perc">
+        <div class="about__avatar-wrapper">
+            <img class="about__avatar" src="{% static 'images/avatar.png' %}" alt="image">
+        </div>
+        <div class="about__column">
+            <a class="about__brand-wrapper" href="/">
+                <img class="about__brand" src="{% static 'images/brand/mini.svg' %}" alt="logotype">
+            </a>
+            <h2 class="about__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </h2>
+            <span class="about__subtitle">
+                Amet itaque doloribus accusamus ad optio Ut fugit autem atque quasi pariatur at distinctio explicabo Dignissimos magnam dolore vitae pariatur consequuntur. Molestiae maxime iste modi nihil asperiores ducimus? Dolores perferendis.
+            </span>
+            <div class="about__avatar-wrapper about__avtar-wrapper_circle">
+                <img class="about__avatar" src="{% static 'images/avatar.png' %}" alt="image">
+            </div>
+        </div>
+        <div class="about__column about__column_end about__collumn_mt_small">
+            <h2 class="about__title">
+                Позвоните нам
+            </h2>
+            <span class="about__subtitle">
+                Или закажите обратный звонок
+            </span>
+            <a class="about__phone-number" href="tel: +7 (987) 757-57-18">+7 (987) 757-57-18</a>
+            <a class="about__phone-number" href="tel: +7 (910) 386-66-61">+7 (910) 386-66-61</a>
+            <div class="button button_end button_opacity" onclick="showFeedbackForm()">Заказать звонок</div>
+        </div>
+    </div>
+</div>
+
