--- a/privollesru/static/css/style.css
+++ b/privollesru/static/css/style.css
@@ -16,6 +16,14 @@ a {
     width: 1200px;
 }
 
+.content.content_relative {
+    position: relative;
+}
+
+.content.content_height_100perc {
+    height: calc(100% - 1rem * 2);
+}
+
 /* .brand */
 .brand {
     height: 10rem;
@@ -325,8 +333,6 @@ a {
 
 .form__button {
     margin-top: 1rem;
-    margin-left: auto;
-    margin-right: auto;
     max-width: 15rem;
 }
 
@@ -522,6 +528,129 @@ a {
 }
 
 /* .about */
+.about {
+}
+
+.about.about_background {
+    position: relative;
+    height: 40rem;
+}
+
+.about.about_background::before {
+    position: absolute;
+    top: 0; left: 0;
+    content: '';
+    z-index: -1;
+    width: 100%; height: 100%;
+    background-image: url(../images/about-background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: brightness(.6);
+}
+
+.about.about_background .about__column {
+    width: 33.3333%; height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+.about.about_background .about__column > *:nth-child(n + 2) {
+    margin-top: 2rem;
+}
+
+.about.about_background .about__column.about__collumn_mt_small > *:nth-child(n + 2) {
+    margin-top: 1rem;
+}
+
+.about.about_background .about__column.about__column_end {
+    align-items: end;
+    text-align: end;
+}
+
+.about.about_background .about__phone-number {
+    margin: 0;
+    padding: 0;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 2.2rem;
+    color: #FAFAFA;
+    text-decoration: none;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+}
+
+.about.about_background .about__avatar-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 0; right: 0;
+    z-index: 0;
+    width: 25rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.about.about_background .about__avtar-wrapper_circle {
+    position: static;
+    display: none;
+    width: auto;
+}
+
+.about.about_background .about__avtar-wrapper_circle > .about__avatar {
+    border-radius: 50%;
+    width: 7rem;
+    border: 2px solid #FAFAFA;
+    height: 7rem;
+    object-fit: cover;
+    top: 0;
+    background: rgba(1, 1, 1, .5);
+}
+
+.about.about_background .about__avatar {
+    width: 100%;
+    object-fit: contain
+}
+
+.about.about_background .about__title {
+    margin: 0;
+    padding: 0;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 2.2rem;
+    color: #FAFAFA;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+}
+
+.about.about_background .about__subtitle {
+    margin: 0;
+    padding: 0;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.4rem;
+    color: #FAFAFA;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+}
+
+.about.about_background .about__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.about.about_background .about__brand-wrapper {
+    width: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-decoration: none;
+    cursor: pointer;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+}
+
+.about.about_background .about__brand {
+    width: 100%;
+    object-fit: contain;
+}
+
 .about__paragraph {
     margin: 1rem 0;
     font-size: 1.2rem;
