chore: add h1 to header

--- a/privollesru/templates/includes/header.html
+++ b/privollesru/templates/includes/header.html
@@ -18,6 +18,7 @@
         </div>
         <div class="header__content header__content_z-index-10">
             <div class="header__column">
+                <h1 class="header__title header__title_big">Привожская лесная компания</h1>
                 <span class="header__title">Поставляем качественный лес и пиломатериалы</span>
                 <span class="header__subtitle header__subtitle_mv-1rem">В любых количествах точно в срок по РФ и на экспорт.</span>
                 <div class="header__link button button_end button_opacity" onclick="showFeedbackForm()">Каталог продукции</div>
