--- a/privollesru/static/css/style.css
+++ b/privollesru/static/css/style.css
@@ -90,7 +90,7 @@ a {
 /* .header */
 .header {
     position: relative;
-    height: 30rem;
+    height: 35rem;
     color: #FAFAFA;
 }
 
@@ -132,6 +132,14 @@ a {
     font-size: 2rem;
     font-weight: 700;
     line-height: 2rem;
+}
+
+.header__title.header__title_big {
+    padding-bottom: .5rem;
+    border-bottom: .2rem solid #FAFAFA;
+    font-size: 2.5rem;
+    line-height: 100%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 .header__subtitle {
