chore: update reviews block

--- a/home/templates/home/includes/reviews.html
+++ b/home/templates/home/includes/reviews.html
@@ -23,11 +23,11 @@
             <h2 class="reviews__title">Персональный менеджер</h2>
             <span class="reviews__subtitle">Опытный менеджер всегда на связи</span>
         </div>
-        <div class="reviews__item">
-            <i class="reviews__icon fas fa-shopping-cart"></i>
-            <h2 class="reviews__title">Высокое качество продукции</h2>
-            <span class="reviews__subtitle">Каждая доска проходит обработку</span>
-        </div>
+        <!-- <div class="reviews__item"> -->
+        <!--     <i class="reviews__icon fas fa-shopping-cart"></i> -->
+        <!--     <h2 class="reviews__title">Высокое качество продукции</h2> -->
+        <!--     <span class="reviews__subtitle">Каждая доска проходит обработку</span> -->
+        <!-- </div> -->
     </div>
 
 </div>
