--- a/privollesru/static/css/style.css
+++ b/privollesru/static/css/style.css
@@ -757,16 +757,18 @@ a {
     margin-top: .5rem;
     display: flex;
     justify-content: center;
+    align-items: start;
     flex-wrap: wrap;
 }
 
 .reviews__item {
     margin: 0 .5rem;
     margin-top: 1rem;
-    width: 30%;
+    width: calc(25% - .5rem * 2);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -775,24 +777,32 @@ a {
 }
 
 .reviews__icon {
+    width: 5rem; height: 5rem;
     padding: .5rem;
-    font-size: 6rem;
-    color: #53ba04;
+    border: .2rem solid #333;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    color: #333;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     transition: filter 1s;
 }
 
 .reviews__title {
+    max-width: 80%;
     margin: 0;
     margin-top: .5rem;
     font-size: 1.25rem;
-    color: #60b122;
+    color: #212121;
 }
 
 .reviews__subtitle {
+    max-width: 80%;
     margin: 0;
     margin-top: .5rem;
     font-size: 1rem;
-    color: #60b122;
+    color: #333;
 }
 
