--- a/privollesru/static/css/style.css
+++ b/privollesru/static/css/style.css
@@ -278,20 +278,112 @@ a {
 }
 
 /* .export */
-.export__content {
-    margin-top: 2rem;
+.export {
+    position: relative;
+}
+
+.export.export_background_dark {
+    background-color: #333;
+}
+
+.export.export_background_image {
+    background-image: url(../images/export-background.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+
+.export .export__content {
     display: flex;
     justify-content: space-between;
     transition: 1s;
 }
 
-.export__image {
+.export .export__content.export__content_row {
+    display: flex;
+}
+
+.export .export__image {
     width: 40rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.export__form {
+.export .export__form {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     width: 100%;
+    max-width: 30rem;
+    opacity: .75;
+    transition: opacity .5s;
+}
+
+.export .export__form:hover {
+    opacity: 1;
+}
+
+.export .export__icon-list {
+    width: 100%;
+    display: flex;
+}
+
+.export .export__icon-list > * {
+    width: calc(33.3333% - 1.5rem);
+    margin-right: 1.5rem;
+}
+
+.export .export__icon-list > *:last-child {
+    margin-right: 0;
+}
+
+.export .export__map {
+    position: absolute;
+    top: 0; left: 0;
+    z-index: -1;
+    width: 100%; height: 100%;
+}
+
+/* .icon-wrapper */
+.icon-wrapper {
+    padding: 4rem 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    text-align: center;
+    background-color: #FFF;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.icon-wrapper .icon-wrapper__title {
+    margin: 0;
+    margin-bottom: 2rem;
+    padding: 0;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.icon-wrapper .icon-wrapper__span {
+    max-width: 80%;
+    margin: 0;
+    margin-bottom: .25rem;
+    padding: 0;
+    font-size: 1.25rem;
+    font-weight: 400
+}
+
+.icon-wrapper .icon-wrapper__span:last-child {
+    margin-bottom: 0;
+}
+
+.icon-wrapper .icon-wrapper__span.icon-wrapper__span_email {
+    color: 333;
+    text-decoration: underline;
+}
+
+.icon-wrapper .icon-wrapper__icon {
+    margin-bottom: .5rem;
+    font-size: 5rem;
+    color: #778075;
 }
 
 /* .form */
@@ -328,8 +420,7 @@ a {
 }
 
 .form__input {
-    max-width: 20rem;
-    width: 20rem;
+    max-width: 100%;
     padding: 1rem;
     font-family: 'Roboto';
     font-weight: 500;
@@ -341,7 +432,7 @@ a {
 
 .form__button {
     margin-top: 1rem;
-    max-width: 15rem;
+    max-width: 100%;
 }
 
 /* .card */
