--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -14,6 +14,8 @@
 
     {% include 'home/includes/reviews.html' %}
 
+    {% include 'home/includes/qa.html' %}
+
     {% include 'home/includes/export.html' %}
 
 {% endblock content %}
