--- a/home/templates/home/includes/qa.html
+++ b/home/templates/home/includes/qa.html
@@ -9,45 +9,45 @@
     <div class="resp-menu-wrapper">
         <div class="resp-menu">
             <div class="resp-menu__header" onclick="">
-                <span class="resp-menu__title">Как сделать заказ</span>
+                <span class="resp-menu__title">Как сделать заказ?</span>
                 <img class="resp-menu__icon" src="{% static 'images/icons/request-icon.svg' %}" alt="icon">
             </div>
             <div class="resp-menu__content resp-menu__content_hidden">
                 <p class="page-par">
-                    Lorem eius minima voluptates ipsam saepe fuga Ex eaque dicta magnam praesentium aperiam Lorem ullam commodi voluptatum ratione quos Odio cumque modi repellendus mollitia beatae Nam quia provident fugit dignissimos.
+                    Позвоните нам по телефону, указанному на сайте или отправьте заявку на интересующую Вас продукцию, и наш менеджер свяжется с вами течении 10 минут.
                 </p>
             </div>
         </div>
         <div class="resp-menu">
             <div class="resp-menu__header">
-                <span class="resp-menu__title">Как опллатить заказ?</span>
+                <span class="resp-menu__title">Вы работаете только оптом или в розницу у Вас тоже можно приобрести товар?</span>
                 <img class="resp-menu__icon" src="{% static 'images/icons/request-icon.svg' %}" alt="icon">
             </div>
             <div class="resp-menu__content resp-menu__content_hidden">
                 <p class="page-par">
-                    Lorem eius minima voluptates ipsam saepe fuga Ex eaque dicta magnam praesentium aperiam Lorem ullam commodi voluptatum ratione quos Odio cumque modi repellendus mollitia beatae Nam quia provident fugit dignissimos.
+                    Наша компания поставляет продукцию оптом и в розницу. Даже если Вы хотите приобрести у нас один куб пиломатериала – Вы уже наш клиент!
                 </p>
             </div>
         </div>
         <div class="resp-menu">
             <div class="resp-menu__header">
-                <span class="resp-menu__title">Курьер опаздывает, как я могу связаться со службой поддержки?</span>
+                <span class="resp-menu__title">Могу ли я сделать заказ если нахожусь в другом городе?</span>
                 <img class="resp-menu__icon" src="{% static 'images/icons/request-icon.svg' %}" alt="icon">
             </div>
             <div class="resp-menu__content resp-menu__content_hidden">
                 <p class="page-par">
-                    Lorem eius minima voluptates ipsam saepe fuga Ex eaque dicta magnam praesentium aperiam Lorem ullam commodi voluptatum ratione quos Odio cumque modi repellendus mollitia beatae Nam quia provident fugit dignissimos.
+                    Мы работаем по всей территории РФ за её пределами. Отправим заказ в любую точку Мира.
                 </p>
             </div>
         </div>
         <div class="resp-menu">
             <div class="resp-menu__header">
-                <span class="resp-menu__title">Как я могу сделать заказ на юридическое лицо?</span>
+                <span class="resp-menu__title">Как долго мне ждать свой заказ?</span>
                 <img class="resp-menu__icon" src="{% static 'images/icons/request-icon.svg' %}" alt="icon">
             </div>
             <div class="resp-menu__content resp-menu__content_hidden">
                 <p class="page-par">
-                    Lorem eius minima voluptates ipsam saepe fuga Ex eaque dicta magnam praesentium aperiam Lorem ullam commodi voluptatum ratione quos Odio cumque modi repellendus mollitia beatae Nam quia provident fugit dignissimos.
+                    Изготовим и доставим строительные пиломатериалы в самые кротчайшие сроки. Доставка возможна в день поступления от вас заявки, если данная продукция имеется на складе. Стандартные размеры всегда в наличии!
                 </p>
             </div>
         </div>
