chore: add content to the about block

--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -35,10 +35,10 @@
                 <img class="about__brand" src="{% static 'images/brand/mini.svg' %}" alt="logotype">
             </a>
             <h2 class="about__title">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                Строите дом или дачу?
             </h2>
             <span class="about__subtitle">
-                Amet itaque doloribus accusamus ad optio Ut fugit autem atque quasi pariatur at distinctio explicabo Dignissimos magnam dolore vitae pariatur consequuntur. Molestiae maxime iste modi nihil asperiores ducimus? Dolores perferendis.
+                Пиломатериал оптом и в розницу от производителя по доступным ценам! Доставим любой объём в короткие сроки в любую точку Мира. Работаем  по всей территории РФ и за ее пределами!
             </span>
             <div class="about__avatar-wrapper about__avtar-wrapper_circle">
                 <img class="about__avatar" src="{% static 'images/avatar.png' %}" alt="image">
@@ -49,7 +49,7 @@
                 Позвоните нам
             </h2>
             <span class="about__subtitle">
-                Или закажите обратный звонок
+                и мы вышлем Вам прайс на интересующую Вас продукцию!
             </span>
             <a class="about__phone-number" href="tel: +7 (987) 757-57-18">+7 (987) 757-57-18</a>
             <a class="about__phone-number" href="tel: +7 (910) 386-66-61">+7 (910) 386-66-61</a>
