--- a/privollesru/templates/base.html
+++ b/privollesru/templates/base.html
@@ -17,6 +17,7 @@
 
         <link rel="canonical" href="http://privolles.ru/">
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="{% static 'css/swiper-bundle.min.css' %}">
         <link rel="shortcut icon" href="{% static 'favicon256.ico' %}" type="image/x-icon">
         <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
