chore: update yandex map

--- a/home/templates/home/includes/export.html
+++ b/home/templates/home/includes/export.html
@@ -27,7 +27,8 @@
 
 <div class="export export_with_map">
         <div class="export__map">
-            <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1d45a927e0086598e25086383b2ba3fb3da2db8a65b09edd71198f789b1e0522&amp;lang=ru_RU&amp;scroll=false"></script>
+            <script src="https://api-maps.yandex.ru/2.1/?apikey=93b1ca85-43ff-4c96-a89e-70fb94c07ca3&lang=ru_RU" type="text/javascript"></script>
+            <div id="map" style="width: 100%; height: 100%;"></div>
         </div>
         <div class="content export__content">
             <div class="export__form">
