--- a/frontend/src/components/Brand/Brand.module.scss
+++ b/frontend/src/components/Brand/Brand.module.scss
@@ -4,10 +4,10 @@
     width: 8rem;
     max-width: 100%;
     max-height: 100%;
-    transition: 1s;
+    transition: transform 1s ease-in-out;
 
     &:hover {
-        width: 9rem;
+        transform: scale(1.2);
     }
 
     & > img {
