--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -1,2 +1,100 @@
-@import 'index.scss'
+@import 'index.scss';
+
+.header {
+    position: relative;
+    height: 35rem;
+    color: #FAFAFA;
+
+    &::after {
+        position: absolute;
+        top: 0; left: 0;
+        content: '';
+        z-index: -1;
+        width: 100%; height: 100%;
+        background: url('/assets/backgrounds/header.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        filter: brightness(.6);
+    }
+
+    & > .content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+
+        & > .top {
+            display: flex;
+            justify-content: space-between;
+        }
+        & > .bottom {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            flex-direction: column;
+            justify-content: center;
+            align-items: end;
+        }
+    }
+
+    & .title {
+        margin: 0;
+        margin-bottom: 1rem;
+        padding-bottom: .5rem;
+        border-bottom: .2rem solid #FAFAFA;
+        font-size: 2.5rem;
+        font-weight: 700;
+        line-height: 1;
+        filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+    }
+
+    & .subtitle {
+        margin: 0;
+        margin-bottom: 1rem;
+        font-size: 2rem;
+        font-weight: 700;
+        line-height: 1.3;
+        filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+    }
+
+    & .additional {
+        margin: 0;
+        font-size: 1.3rem;
+        font-weight: 500;
+        filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+    }
+
+    & .info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 19rem;
+
+        & > .top {
+            margin-bottom: .3rem;
+            border-bottom: #FAFAFA .1rem solid;
+            padding-bottom: .4rem;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            & a {
+                font-size: 1rem;
+                font-weight: 700;
+                color: #FAFAFA;
+                text-decoration: none;
+                transition: color 1s;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        & > .bottom {
+            margin-left: auto;
+        }
+    }
+}
 
