--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -26,6 +26,19 @@
         & > .top {
             display: flex;
             justify-content: space-between;
+
+            @media screen and (max-width: 899px) {
+                align-items: center;
+                flex-direction: column;
+
+                & > * {
+                    margin-bottom: 1rem;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
+            }
         }
         & > .bottom {
             display: flex;
@@ -34,27 +47,46 @@
             flex-direction: column;
             justify-content: center;
             align-items: end;
+
+            & > * {
+                margin-bottom: 1rem;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+
+            @media screen and (max-width: 899px) {
+                text-align: center;
+                align-items: center;
+            }
         }
     }
 
     & .title {
         margin: 0;
-        margin-bottom: 1rem;
         padding-bottom: .5rem;
         border-bottom: .2rem solid #FAFAFA;
         font-size: 2.5rem;
         font-weight: 700;
         line-height: 1;
         filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+
+        @media screen and (max-width: 899px) {
+            font-size: 2rem;
+        }
     }
 
     & .subtitle {
         margin: 0;
-        margin-bottom: 1rem;
         font-size: 2rem;
         font-weight: 700;
         line-height: 1.3;
         filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+
+        @media screen and (max-width: 899px) {
+            font-size: 1.5rem;
+        }
     }
 
     & .additional {
@@ -62,6 +94,10 @@
         font-size: 1.3rem;
         font-weight: 500;
         filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+
+        @media screen and (max-width: 899px) {
+            font-size: 1rem;
+        }
     }
 }
 
