--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -6,6 +6,7 @@
     align-items: center;
     text-align: center;
     padding: 0 10rem;
+    margin-bottom: 1rem;
 
     @media screen and (max-width: 899px) {
         padding: 0;
