--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -4,19 +4,21 @@
     position: relative;
     height: 35rem;
     max-height: 100vh;
-    color: #FAFAFA;
+    color: #fafafa;
 
     &::after {
         position: absolute;
-        top: 0; left: 0;
+        top: 0;
+        left: 0;
         content: '';
         z-index: -1;
-        width: 100%; height: 100%;
+        width: 100%;
+        height: 100%;
         background: url('/assets/backgrounds/header.jpg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        filter: brightness(.6);
+        filter: brightness(0.6);
     }
 
     & > .content {
@@ -27,6 +29,19 @@
         & > .top {
             display: flex;
             justify-content: space-between;
+
+            & > .right {
+                display: flex;
+                align-items: start;
+
+                & > * {
+                    margin-right: 2rem;
+
+                    &:last-child {
+                        margin-right: 0;
+                    }
+                }
+            }
 
             @media screen and (max-width: 899px) {
                 align-items: center;
@@ -67,12 +82,12 @@
 
     & .title {
         margin: 0;
-        padding-bottom: .5rem;
-        border-bottom: .2rem solid #FAFAFA;
+        padding-bottom: 0.5rem;
+        border-bottom: 0.2rem solid #fafafa;
         font-size: 2.5rem;
         font-weight: 700;
         line-height: 1;
-        filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+        filter: drop-shadow(0px 4px 4px rgba(#000, 0.5));
 
         @media screen and (max-width: 899px) {
             font-size: 2rem;
@@ -84,7 +99,7 @@
         font-size: 2rem;
         font-weight: 700;
         line-height: 1.3;
-        filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+        filter: drop-shadow(0px 4px 4px rgba(#000, 0.5));
 
         @media screen and (max-width: 899px) {
             font-size: 1.5rem;
@@ -95,10 +110,14 @@
         margin: 0;
         font-size: 1.3rem;
         font-weight: 500;
-        filter: drop-shadow(0px 4px 4px rgba(#000, .5));
+        filter: drop-shadow(0px 4px 4px rgba(#000, 0.5));
 
         @media screen and (max-width: 899px) {
             font-size: 1rem;
         }
+    }
+
+    & .info {
+        justify-content: start;
     }
 }
