--- a/frontend/src/components/Questions/Item/Item.module.scss
+++ b/frontend/src/components/Questions/Item/Item.module.scss
@@ -1,7 +1,7 @@
 @import 'index.scss';
 
 .item {
-    border-bottom: 1px solid #E3E3E3;
+    border-bottom: 1px solid #e3e3e3;
 
     &.active {
         & .header {
@@ -25,16 +25,16 @@
 
         & .title {
             font-size: 20px;
-            font-family: 600;
+            font-weight: 600;
         }
 
         & .button {
             position: relative;
             width: 1.5rem;
             height: 1.5rem;
-            border: .15rem solid #60b122;
+            border: 0.15rem solid #60b122;
             border-radius: 50%;
-            transition: transform .3s ease-in-out;
+            transition: transform 0.3s ease-in-out;
 
             &::before,
             &::after {
@@ -45,9 +45,9 @@
                 right: 0;
                 content: '';
                 width: 80%;
-                height: .13rem;
+                height: 0.13rem;
                 background: #60b122;
-                border-radius: .5rem;
+                border-radius: 0.5rem;
                 margin: auto;
             }
 
@@ -62,7 +62,7 @@
         padding: 13.5px 50px 27px 50px;
         opacity: 0;
         pointer-events: none;
-        transition: all .3s ease-in-out;
+        transition: all 0.3s ease-in-out;
 
         & p {
             margin: 0;
