--- a/frontend/src/components/Products/Item/Item.module.scss
+++ b/frontend/src/components/Products/Item/Item.module.scss
@@ -7,6 +7,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 90%;
+    margin: {
+        left: auto;
+        right: auto;
+    }
 
     & > .background {
         position: absolute;
