chore[frontend]: minor changes to Products slider

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -32,3 +32,8 @@ code {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    color: #60b122;
+}
