--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -32,7 +32,7 @@
 
             & > .right {
                 display: flex;
-                align-items: start;
+                align-items: flex-start;
 
                 & > * {
                     margin-right: 2rem;
@@ -40,6 +40,17 @@
                     &:last-child {
                         margin-right: 0;
                     }
+
+                    @media screen and (max-width: 899px) {
+                        margin-right: 0;
+                        margin-bottom: 1rem;
+                    }
+                }
+
+                @media screen and (max-width: 899px) {
+                    margin-right: 0;
+                    flex-direction: column;
+                    align-items: flex-end;
                 }
             }
 
@@ -118,6 +129,6 @@
     }
 
     & .info {
-        justify-content: start;
+        justify-content: flex-start;
     }
 }
