--- a/frontend/src/components/Button/Button.module.scss
+++ b/frontend/src/components/Button/Button.module.scss
@@ -5,25 +5,30 @@
     padding: 1rem 2rem;
     font-size: 1.25rem;
     font-weight: 500;
-    color: #FAFAFA;
+    color: #fafafa;
     text-transform: uppercase;
     text-align: center;
-    background: #51961B;
-    filter: drop-shadow(0 .2rem .2rem rgba(#000, .25));
+    background: #51961b;
+    filter: drop-shadow(0 0.2rem 0.2rem rgba(#000, 0.25));
     cursor: pointer;
     user-select: none;
-    transition: background .5s ease-in-out;
+    transition: background 0.5s ease-in-out;
 
     &:hover {
-        background: #60B122;
+        background: #60b122;
     }
 
     &.opacity {
-        opacity: .75;
-        transition: background .5s ease-in-out, opacity .5s ease-in-out;
+        opacity: 0.75;
+        transition: background 0.5s ease-in-out, opacity 0.5s ease-in-out;
 
         &:hover {
             opacity: 1;
         }
+    }
+
+    @media screen and (max-width: 899px) {
+        padding: 1rem;
+        font-size: 1rem;
     }
 }
