--- a/frontend/src/components/Benefits/Circle/Circle.module.scss
+++ b/frontend/src/components/Benefits/Circle/Circle.module.scss
@@ -9,38 +9,48 @@
 
     &:hover {
         & .icon {
-            filter: drop-shadow(0 .3rem .3rem rgba(#333, .75));
+            filter: drop-shadow(0 0.3rem 0.3rem rgba(#333, 0.75));
         }
     }
 
     & .icon {
         width: 5rem;
         height: 5rem;
-        padding: .5rem;
-        border: .2rem solid #333;
+        padding: 0.5rem;
+        border: 0.2rem solid #333;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 3rem;
         color: #333;
-        filter: drop-shadow(0 .3rem .3rem rgba(#333, .25));
-        transition: filter .5s ease-in-out;
+        filter: drop-shadow(0 0.3rem 0.3rem rgba(#333, 0.25));
+        transition: filter 0.5s ease-in-out;
     }
 
     & .title {
         max-width: 80%;
         margin: 0 auto;
-        margin-top: .5rem;
+        margin-top: 0.5rem;
         font-size: 1.25rem;
         color: #212121;
+
+        @media screen and (max-width: 899px) {
+            font-size: 1rem;
+            max-width: 95%;
+        }
     }
 
     & .subtitle {
         max-width: 80%;
         margin: 0 auto;
-        margin-top: .5rem;
+        margin-top: 0.5rem;
         font-size: 1rem;
         color: #333;
+
+        @media screen and (max-width: 899px) {
+            font-size: 0.8rem;
+            max-width: 95%;
+        }
     }
 }
