--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -19,16 +19,28 @@
         &:first-child {
             margin-top: 0;
         }
+
+        @media screen and (max-width: 899px) {
+            margin-top: 0.5rem;
+        }
     }
 
     & h2 {
         font-size: 2rem;
         font-weight: 700;
+
+        @media screen and (max-width: 899px) {
+            font-size: 1.5rem;
+        }
     }
 
     & p {
-        font-size: 1.0rem;
+        font-size: 1rem;
         font-weight: 500;
+
+        @media screen and (max-width: 899px) {
+            font-size: 1rem;
+        }
     }
 
     & .line {
