chore[frontend]: minor changes to adaptive

--- a/frontend/src/components/AboutUs/AboutUs.module.scss
+++ b/frontend/src/components/AboutUs/AboutUs.module.scss
@@ -11,7 +11,12 @@
             }
         }
     }
+
     & p {
         line-height: 1.5em;
+
+        @media screen and (max-width: 899px) {
+            text-align: center;
+        }
     }
 }
