--- a/frontend/src/components/Footer/Contacts/Contacts.module.scss
+++ b/frontend/src/components/Footer/Contacts/Contacts.module.scss
@@ -12,6 +12,20 @@
             max-width: 25%;
             flex: 0 1 25%;
             align-self: stretch;
+
+            @media screen and (max-width: 899px) {
+                max-width: 100%;
+                flex: 0 0 100%;
+                margin-top: 1rem;
+
+                &:first-child {
+                    margin-top: 0;
+                }
+            }
+        }
+
+        @media screen and (max-width: 899px) {
+            flex-direction: column;
         }
     }
 }
