--- a/frontend/src/components/Poster/Poster.module.scss
+++ b/frontend/src/components/Poster/Poster.module.scss
@@ -10,6 +10,13 @@
             top: 1rem;
             bottom: 8rem;
         }
+
+        @media screen and (max-width: 899px) {
+            padding: {
+                top: 1rem;
+                bottom: 1rem;
+            }
+        }
     }
 
     & > .background {
@@ -34,6 +41,15 @@
         align-items: center;
         height: 100%;
 
+        @media screen and (max-width: 899px) {
+            & > * {
+                margin-top: 2rem;
+                &:first-child {
+                    margin-top: 0;
+                }
+            }
+        }
+
         & > .avatar {
             position: absolute;
             bottom: 0;
@@ -48,6 +64,24 @@
                 object-fit: contain;
                 object-position: bottom;
                 display: block;
+
+                @media screen and (max-width: 899px) {
+                    position: absolute;
+                    top: 0;
+                    transform: scale(1.3);
+                }
+            }
+
+            @media screen and (max-width: 899px) {
+                margin-top: 1rem;
+                position: relative;
+                width: 8rem;
+                height: 8rem;
+                background: rgba(#333, 0.5);
+                border-radius: 50%;
+                border: 2px solid #fafafa;
+                overflow: hidden;
+                flex: 1 0 8rem;
             }
         }
 
@@ -61,12 +95,21 @@
                 justify-content: center;
                 align-items: flex-start;
                 text-align: start;
+
+                @media screen and (max-width: 899px) {
+                    align-items: center;
+                }
             }
 
             &:last-child {
                 justify-content: flex-end;
                 align-items: flex-end;
                 text-align: end;
+
+                @media screen and (max-width: 899px) {
+                    align-items: center;
+                    justify-content: center;
+                }
             }
 
             & > * {
@@ -77,6 +120,15 @@
                     margin-top: 0;
                 }
             }
+
+            @media screen and (max-width: 899px) {
+                flex: 1 1 auto;
+            }
+        }
+
+        @media screen and (max-width: 899px) {
+            flex-direction: column;
+            justify-content: space-around;
         }
     }
 
@@ -106,6 +158,11 @@
         font-weight: 700;
         line-height: 1.2em;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+
+        @media screen and (max-width: 899px) {
+            text-align: center;
+            font-size: 1rem;
+        }
     }
 
     & .phone {
@@ -140,5 +197,14 @@
         font-weight: 400;
         line-height: 1.2em;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+
+        @media screen and (max-width: 899px) {
+            text-align: center;
+            font-size: 1rem;
+        }
+    }
+
+    @media screen and (max-width: 899px) {
+        height: auto;
     }
 }
