--- a/frontend/src/components/Questions/Item/Item.module.scss
+++ b/frontend/src/components/Questions/Item/Item.module.scss
@@ -26,6 +26,10 @@
         & .title {
             font-size: 20px;
             font-weight: 600;
+
+            @media screen and (max-width: 899px) {
+                font-size: 1rem;
+            }
         }
 
         & .button {
@@ -73,6 +77,11 @@
             font-weight: 300;
             color: #000;
             line-height: 25px;
+
+            @media screen and (max-width: 899px) {
+                font-size: 1rem;
+                line-height: 1.3em;
+            }
         }
     }
 }
