--- a/frontend/src/components/Questions/Item/Item.module.scss
+++ b/frontend/src/components/Questions/Item/Item.module.scss
@@ -24,6 +24,7 @@
         cursor: pointer;
 
         & .title {
+            flex: 0 0 80%;
             font-size: 20px;
             font-weight: 600;
 
